--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "ejs": "^3.0.1",
     "express": "^4.17.1",
-    "install": "^0.13.0"
+    "express-handlebars": "^3.0.2",
+    "install": "^0.13.0",
+    "pug": "^2.0.4"
   }
 }
